#9 Updated global functions, fixed overloads, moved constructors

--- a/docs/api-reference/CRMScript.Native.License.yml
+++ b/docs/api-reference/CRMScript.Native.License.yml
@@ -7,6 +7,7 @@ items:
   - crmscript
   children:
   - CRMScript.Native.License.#ctor
+  - CRMScript.Native.License.#ctor(String,String)
   - CRMScript.Native.License.getInfo()
   - CRMScript.Native.License.getReasonInvalid()
   - CRMScript.Native.License.getValue(String)
@@ -32,6 +33,31 @@ items:
   remarks: 
   syntax: 
     content: License
+  example: 
+- uid: CRMScript.Native.License.#ctor(String,String)
+  commentId: M:CRMScript.Native.License.#ctor(String,String)
+  id: '#ctor(String,String)'
+  so.intellisense: Void.License
+  langs:
+  - crmscript
+  name: '#ctor(String,String)'
+  nameWithType: License.#ctor(String,String)
+  fullName: CRMScript.Native.License.#ctor(String,String)
+  type: Constructor
+  summary: "\nDeprecated in 7.1.\n"
+  remarks: 
+  syntax: 
+    content: License(String host, String license)
+    parameters:
+    - id: host
+      type: CRMScript.Global.String
+      description:  Hostname string
+    - id: license
+      type: CRMScript.Global.String
+      description:  License key
+    return:
+      type: CRMScript.Native.License
+      description: License object
   example: 
 - uid: CRMScript.Native.License.getInfo()
   commentId: M:CRMScript.Native.License.getInfo()
