--- a/docs/api-reference/CRMScript.Native.MacroParameter.yml
+++ b/docs/api-reference/CRMScript.Native.MacroParameter.yml
@@ -7,6 +7,8 @@ items:
   - crmscript
   children:
   - CRMScript.Native.MacroParameter.#ctor
+  - CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
+  - CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
   - CRMScript.Native.MacroParameter.getControlConfig()
   - CRMScript.Native.MacroParameter.getDescription()
   - CRMScript.Native.MacroParameter.getIsFixedValue()
@@ -45,6 +47,84 @@ items:
   remarks: 
   syntax: 
     content: MacroParameter
+  example: 
+- uid: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
+  commentId: M:CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
+  id: '#ctor(String,String,Map,String,String,Bool)'
+  so.intellisense: Void.MacroParameter
+  langs:
+  - crmscript
+  name: '#ctor(String,String,Map,String,String,Bool)'
+  nameWithType: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
+  fullName: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
+  type: Constructor
+  summary: "\nInitializes a new instance of the MacroParameter class.\n"
+  remarks: 
+  syntax: 
+    content: MacroParameter(String name, String type, Map controlConfig, String label, String description, Bool isOptional)
+    parameters:
+    - id: name
+      type: CRMScript.Global.String
+      description: The name of the parameter.
+    - id: type
+      type: CRMScript.Global.String
+      description: The type of the parameter.
+    - id: controlConfig
+      type: CRMScript.Global.Map
+      description: the control configuration values the type of the parameter allows. Optional
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the parameter.
+    - id: description
+      type: CRMScript.Global.String
+      description: A longer description of the parameter.
+    - id: isOptional
+      type: CRMScript.Global.Bool
+      description: Whether the parameter is optional.
+    return:
+      type: CRMScript.Native.MacroParameter
+  example: 
+- uid: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
+  commentId: M:CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
+  id: '#ctor(String,String,Map,String,String,Bool,String,Bool)'
+  so.intellisense: Void.MacroParameter
+  langs:
+  - crmscript
+  name: '#ctor(String,String,Map,String,String,Bool,String,Bool)'
+  nameWithType: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
+  fullName: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool,String,Bool)
+  type: Constructor
+  summary: "\nInitializes a new instance of the MacroParameter class.\n"
+  remarks: 
+  syntax: 
+    content: MacroParameter(String name, String type, Map controlConfig, String label, String description, Bool isOptional, String defaultValue, Bool defaultValueIsFixed)
+    parameters:
+    - id: name
+      type: CRMScript.Global.String
+      description: The name of the parameter.
+    - id: type
+      type: CRMScript.Global.String
+      description: The type of the parameter.
+    - id: controlConfig
+      type: CRMScript.Global.Map
+      description: the control configuration values the type of the parameter allows. Optional
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the parameter.
+    - id: description
+      type: CRMScript.Global.String
+      description: A longer description of the parameter.
+    - id: isOptional
+      type: CRMScript.Global.Bool
+      description: Whether the parameter is optional.
+    - id: defaultValue
+      type: CRMScript.Global.String
+      description: 
+    - id: defaultValueIsFixed
+      type: CRMScript.Global.Bool
+      description: whether or not the default value of the parameter is fixed
+    return:
+      type: CRMScript.Native.MacroParameter
   example: 
 - uid: CRMScript.Native.MacroParameter.getControlConfig()
   commentId: M:CRMScript.Native.MacroParameter.getControlConfig()
