--- a/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
+++ b/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
@@ -7,6 +7,7 @@ items:
   - crmscript
   children:
   - CRMScript.Native.MacroReturnValue.#ctor
+  - CRMScript.Native.MacroReturnValue.#ctor(String,String)
   - CRMScript.Native.MacroReturnValue.getDescription()
   - CRMScript.Native.MacroReturnValue.getName()
   - CRMScript.Native.MacroReturnValue.setDescription(String)
@@ -31,6 +32,30 @@ items:
   remarks: 
   syntax: 
     content: MacroReturnValue
+  example: 
+- uid: CRMScript.Native.MacroReturnValue.#ctor(String,String)
+  commentId: M:CRMScript.Native.MacroReturnValue.#ctor(String,String)
+  id: '#ctor(String,String)'
+  so.intellisense: Void.MacroReturnValue
+  langs:
+  - crmscript
+  name: '#ctor(String,String)'
+  nameWithType: MacroReturnValue.#ctor(String,String)
+  fullName: CRMScript.Native.MacroReturnValue.#ctor(String,String)
+  type: Constructor
+  summary: "\nCreates and returns a macro return value.\n"
+  remarks: 
+  syntax: 
+    content: MacroReturnValue(String name, String description)
+    parameters:
+    - id: name
+      type: CRMScript.Global.String
+      description: the name of the return value
+    - id: description
+      type: CRMScript.Global.String
+      description: a longer description of the return value
+    return:
+      type: CRMScript.Native.MacroReturnValue
   example: 
 - uid: CRMScript.Native.MacroReturnValue.getDescription()
   commentId: M:CRMScript.Native.MacroReturnValue.getDescription()
