#49 #9 Added EventData concept page with links to API reference.

--- a/docs/00-custom/toc.yml
+++ b/docs/00-custom/toc.yml
@@ -79,6 +79,8 @@ items:
     href: ../datatypes/datetime-type.md
   - name: Generic type
     href: ../datatypes/generic-type.md
+  - name: EventData type
+    href: ../datatypes/eventdata-type.md
 - name: Debugging
   items:
   - name: Built in debugger
