#32 #9 Marked classes and funtions unavailable in CRM Online

--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -1068,6 +1068,7 @@ items:
   commentId: M:CRMScript.Global.Void.executeSQLQuery(String)
   id: 'executeSQLQuery(String)'
   so.intellisense: Void.executeSQLQuery
+  so.envir: onsite
   langs:
   - crmscript
   name: 'executeSQLQuery(String)'
@@ -1419,6 +1420,7 @@ items:
   commentId: M:CRMScript.Global.Void.getCookie(String)
   id: 'getCookie(String)'
   so.intellisense: Void.getCookie
+  so.envir: onsite
   langs:
   - crmscript
   name: 'getCookie(String)'
@@ -1613,6 +1615,7 @@ items:
   commentId: M:CRMScript.Global.Void.getEnvVariable(String)
   id: 'getEnvVariable(String)'
   so.intellisense: Void.getEnvVariable
+  so.envir: onsite
   langs:
   - crmscript
   name: 'getEnvVariable(String)'
@@ -3629,6 +3632,7 @@ items:
   commentId: M:CRMScript.Global.Void.runProgram(String)
   id: 'runProgram(String)'
   so.intellisense: Void.runProgram
+  so.envir: onsite
   langs:
   - crmscript
   name: 'runProgram(String)'
@@ -3744,6 +3748,7 @@ items:
   commentId: M:CRMScript.Global.Void.setCookie(String,String,Bool)
   id: 'setCookie(String,String,Bool)'
   so.intellisense: Void.setCookie
+  so.envir: onsite
   langs:
   - crmscript
   name: 'setCookie(String,String,Bool)'
