--- a/docs/api-reference/CRMScript.Native.File.yml
+++ b/docs/api-reference/CRMScript.Native.File.yml
@@ -23,13 +23,14 @@ items:
   nameWithType: File
   fullName: CRMScript.Native.File
   type: Class
-  summary: "\nRepresents a file.<p></p>\nUse open() before you call any other methods.\n"
+  summary: "\nRepresents a file. <strong>This class is not available in CRM Online.</strong><p></p>\nUse open() before you call any other methods.\n"
   example: 
   - "\n<pre><code>File f;\n\nf.open(&quot;test.txt&quot;, &quot;a+&quot;); // Opening file appending (and creating)\nf.write(&quot;test&quot;);\nf.close(); // Closing the file when done writing\n\nFile g;\n\ng.open(&quot;test.txt&quot;, &quot;r&quot;); // Opening file for reading only\nprint(g.readAll());</code></pre>\n"
 - uid: CRMScript.Native.File.#ctor
   commentId: M:CRMScript.Native.File.#ctor
   id: '#ctor'
   so.intellisense: Void.File
+  so.envir: onsite
   langs:
   - crmscript
   name: '#ctor'
