--- a/docs/api-reference/CRMScript.Native.StatLib.yml
+++ b/docs/api-reference/CRMScript.Native.StatLib.yml
@@ -312,13 +312,14 @@ items:
   commentId: M:CRMScript.Native.StatLib.setSql(String)
   id: 'setSql(String)'
   so.intellisense: StatLib.setSql
+  so.envir: onsite
   langs:
   - crmscript
   name: 'setSql(String)'
   nameWithType: StatLib.setSql(String)
   fullName: CRMScript.Native.StatLib.setSql(String)
   type: Method
-  summary: "\nSets the query for the instance.\n"
+  summary: "\nSets the query for the instance. <strong>This method is not available in CRM Online.</strong>\n"
   remarks: 
   syntax: 
     content: Void setSql(String sqlStatement)
