--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -393,6 +393,7 @@ items:
   - CRMScript.NetServer.NSTicketInfo
   - CRMScript.NetServer.NSTicketMessage
   - CRMScript.NetServer.NSTicketMessageEntity
+  - CRMScript.NetServer.NSTicketMessageHeader
   - CRMScript.NetServer.NSTicketPriority
   - CRMScript.NetServer.NSTicketPriorityEntity
   - CRMScript.NetServer.NSTicketStatusEntity
@@ -3292,3 +3293,9 @@ references:
   name: ConfigType
   nameWithType: ConfigType
   fullName: CRMScript.NetServer.ConfigType
+- uid: CRMScript.NetServer.NSTicketMessageHeader
+  commentId: T:CRMScript.NetServer.NSTicketMessageHeader
+  isExternal: true
+  name: NSTicketMessageHeader
+  nameWithType: NSTicketMessageHeader
+  fullName: CRMScript.NetServer.NSTicketMessageHeader
