--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -804,6 +804,8 @@ items:
     href: CRMScript.NetServer.NSTicketMessage.yml
   - name: NSTicketMessageEntity
     href: CRMScript.NetServer.NSTicketMessageEntity.yml
+  - name: NSTicketMessageHeader
+    href: CRMScript.NetServer.NSTicketMessageHeader.yml
   - name: NSTicketPriority
     href: CRMScript.NetServer.NSTicketPriority.yml
   - name: NSTicketPriorityEntity
