#9 updated SMS Link Mobility

--- a/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSmsConfig.yml
@@ -73,7 +73,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Name of the selected provider, i.e. CM, Compaya SMS (cpsms.dk), Intelecom SMS, PSWinCom SMS, SMS Teknik or TXTLocal.
+      description: Name of the selected provider, i.e. CM, Compaya SMS (cpsms.dk), Intelecom SMS, Link Mobility SMS, SMS Teknik, or TXTLocal.
   example: 
   - "\n<pre><code>NSSmsConfig thing;\nString netServerSmsProvider = thing.GetNetServerSmsProvider();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSmsConfig.GetNsPluginConfig()
@@ -155,7 +155,7 @@ items:
     parameters:
     - id: netServerSmsProvider
       type: CRMScript.Global.String
-      description: Name of the selected provider, i.e. CM, Compaya SMS (cpsms.dk), Intelecom SMS, PSWinCom SMS, SMS Teknik or TXTLocal.
+      description: Name of the selected provider, i.e. CM, Compaya SMS (cpsms.dk), Intelecom SMS, Link Mobility SMS, SMS Teknik, or TXTLocal.
     return:
       type: CRMScript.Global.Void
   example: 
